<resources>
    <string name="app_name">LoginSignUp</string>
    <string name="signup">SignUp</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_accept_privacy_policy_and_terms">I accept privacy policy and terms.</string>
</resources>