<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".auth.SignupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/signupanim"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_url="https://lottie.host/8473a39e-a495-4b02-aa40-eeb27d5833c3/wLhlU99Tyt.json"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:hint="@string/username"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edittext_bg"
                android:inputType="text|textCapSentences|textAutoCorrect"
                android:importantForAutofill="no"
                tools:ignore="TextFields" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:hint="@string/email"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edittext_bg"
                android:autofillHints=""
                android:inputType="text|textCapSentences|textAutoCorrect"
                tools:ignore="TextFields" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:hint="@string/password"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edittext_bg"
                android:inputType="text|textCapSentences|textAutoCorrect"
                android:autofillHints=""
                tools:ignore="TextFields" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:hint="@string/confirm_password"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edittext_bg"
                android:inputType="text|textCapSentences|textAutoCorrect"
                android:autofillHints=""
                tools:ignore="TextFields" />

            <CheckBox
                android:id="@+id/myCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="13sp"
                android:padding="5dp"
                android:text="@string/i_accept_privacy_policy_and_terms"
                android:button="@drawable/checkbox_bg"
                android:background="@android:color/transparent"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="SignUp"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_bg_btn"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>